--- a/ff7-index.html
+++ b/ff7-index.html
@@ -15,7 +15,7 @@
         body {
             width: 100%;
             height: 100vh;
-            background: url(./bg-full.jpg) center no-repeat;
+            background: url(./images-ff7/bg-full.jpg) center no-repeat;
         }
 
         .full-bg {
@@ -38,7 +38,7 @@
 
         .left {
             flex: 1;
-            background: url(./main.jpg) center/cover no-repeat;
+            background: url(./images-ff7/main.jpg) center/cover no-repeat;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -83,12 +83,12 @@
         }
 
         .right-top {
-            background: #aaa url(./cloud.png) bottom right/auto 90% no-repeat;
+            background: #aaa url(./images-ff7/cloud.png) bottom right/auto 90% no-repeat;
             padding: 0 30px;
         }
 
         .right-bottom {
-            background: #000 url(./tifa.png) bottom left 10px/auto 90% no-repeat;
+            background: #000 url(./images-ff7/tifa.png) bottom left 10px/auto 90% no-repeat;
             padding: 0 30px;
         }
 
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="left">
                 <div class="sale">
-                    <img src="./ps4-ff7.png" alt="ps4-ff7">
+                    <img src="./images-ff7/ps4-ff7.png" alt="ps4-ff7">
                     <h1 style="text-transform: uppercase;">Available Now</h1>
                     <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
                         architecto nihil doloribus
